[gd_scene load_steps=10 format=3 uid="uid://bl07530pf7uhq"]

[ext_resource type="Script" path="res://scripts/main_menu.gd" id="1_kuba6"]
[ext_resource type="FontFile" uid="uid://cfqhh4yntr6j2" path="res://Facon.ttf" id="2_jetkk"]
[ext_resource type="FontFile" uid="uid://dc0g87d43xkdc" path="res://font.ttf" id="3_p05qw"]

[sub_resource type="Theme" id="Theme_6wdmb"]
default_font = ExtResource("2_jetkk")

[sub_resource type="Theme" id="Theme_8e58l"]
default_font = ExtResource("3_p05qw")

[sub_resource type="Environment" id="Environment_f8f6i"]
background_mode = 3
background_canvas_max_layer = 1
glow_enabled = true
glow_blend_mode = 0

[sub_resource type="Theme" id="Theme_gynji"]
default_font = ExtResource("3_p05qw")

[sub_resource type="Theme" id="Theme_druc3"]
default_font = ExtResource("3_p05qw")

[sub_resource type="Theme" id="Theme_p0q76"]
default_font = ExtResource("3_p05qw")

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_kuba6")
_theme = SubResource("Theme_6wdmb")
default_theme = SubResource("Theme_8e58l")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="WorldEnvironment" type="WorldEnvironment" parent="CanvasLayer"]
environment = SubResource("Environment_f8f6i")

[node name="G" type="Label" parent="CanvasLayer"]
self_modulate = Color(6, 1, 6, 1)
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -109.0
offset_top = 20.0
offset_right = 118.0
offset_bottom = 320.0
grow_horizontal = 2
size_flags_vertical = 0
theme_override_colors/font_color = Color(0.215686, 0.215686, 0.215686, 1)
theme_override_fonts/font = ExtResource("2_jetkk")
theme_override_font_sizes/font_size = 300
text = "G
"

[node name="Timer" type="Timer" parent="CanvasLayer/G"]
wait_time = 0.1
autostart = true

[node name="Play1" type="Button" parent="CanvasLayer"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -54.5
offset_top = -39.0
offset_right = 54.5
offset_bottom = 39.0
grow_horizontal = 2
grow_vertical = 2
theme = SubResource("Theme_gynji")
theme_override_colors/font_hover_color = Color(6, 1, 6, 1)
theme_override_font_sizes/font_size = 50
text = "Play"
flat = true

[node name="Title" type="Label" parent="CanvasLayer"]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -306.0
offset_top = 56.0
offset_right = 307.0
offset_bottom = 256.0
grow_horizontal = 2
size_flags_vertical = 0
theme_override_fonts/font = ExtResource("3_p05qw")
theme_override_font_sizes/font_size = 200
text = "TANK"

[node name="Quit" type="Button" parent="CanvasLayer"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -56.0
offset_top = 165.0
offset_right = 57.0
offset_bottom = 243.0
grow_horizontal = 2
grow_vertical = 2
theme = SubResource("Theme_druc3")
theme_override_colors/font_hover_color = Color(6, 1, 6, 1)
theme_override_font_sizes/font_size = 50
text = "Quit"
flat = true

[node name="Settings" type="Button" parent="CanvasLayer"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -101.0
offset_top = 64.0
offset_right = 101.0
offset_bottom = 142.0
grow_horizontal = 2
grow_vertical = 2
theme = SubResource("Theme_p0q76")
theme_override_colors/font_hover_color = Color(6, 1, 6, 1)
theme_override_font_sizes/font_size = 50
text = "Settings"
flat = true

[connection signal="timeout" from="CanvasLayer/G/Timer" to="." method="_on_timer_timeout"]
[connection signal="mouse_entered" from="CanvasLayer/Play1" to="." method="_on_play_1_mouse_entered"]
[connection signal="mouse_exited" from="CanvasLayer/Play1" to="." method="_on_play_1_mouse_exited"]
[connection signal="pressed" from="CanvasLayer/Play1" to="." method="_on_button_pressed"]
[connection signal="mouse_entered" from="CanvasLayer/Quit" to="." method="_on_quit_mouse_entered"]
[connection signal="mouse_exited" from="CanvasLayer/Quit" to="." method="_on_quit_mouse_exited"]
[connection signal="pressed" from="CanvasLayer/Quit" to="." method="_on_button_quit"]
[connection signal="mouse_entered" from="CanvasLayer/Settings" to="." method="_on_settings_mouse_entered"]
[connection signal="mouse_exited" from="CanvasLayer/Settings" to="." method="_on_settings_mouse_exited"]
[connection signal="pressed" from="CanvasLayer/Settings" to="." method="_on_settings_pressed"]
